--- a/TelecomX_BR.ipynb
+++ b/TelecomX_BR.ipynb
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#📌 Extracão"],
+        "#📌 Extracão e Preparação de Dados"],
       "metadata": {
         "id": "JwLw-d74rvXm"
       }
